# pythonreleaser

./: main.py  pyproject.toml
.github/workflows/: changelog.yaml  min-reuse.yml  release.cliff.toml  release.yml  set-up-python-reusable.yml
